# blood-flow

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README_8md.html  annotated.html  annotated_dup.js  blood__flow__system_8cc.html  blood__flow__system_8cc.js  blood__flow__system_8h.html  blood__flow__system_8h.js  blood__flow__system_8h_source.html  classBloodFlowSystem-members.html  classBloodFlowSystem.html  classBloodFlowSystem.js  classJunctionSolver-members.html  classJunctionSolver.html  classJunctionSolver.js  classParsedTools_1_1Constants-members.html  classParsedTools_1_1Constants.html  classParsedTools_1_1Constants.js  classParsedTools_1_1Function-members.html  classParsedTools_1_1Function.html  classParsedTools_1_1Function.js  classes.html  constants_8cc.html  constants_8cc.js  constants_8h.html  constants_8h.js  constants_8h_source.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  function_8cc.html  function_8h.html  function_8h.js  function_8h_source.html  (+97 more)
.github/workflows/: doxygen.yml  indentation.yml  tests.yml
NumData/: HDG_IDA_P.csv  HDG_IDA_Q.csv
NumData/aorta bifurcation/: HDG-IDA_AortaMid.csv  HDG-IDA_Junction.csv
NumData/aorta-bifurcation/: HDG-IDA_IliacMid.csv
apps/: blood_flow.cc
doc/: Doxyfile
include/: blood_flow_system.h  blood_flow_system_updated_1d3d.h  junction_solver.h  non_linear_conservation_law.h  vtk_utils.h
latex/: blood_flow.bib  blood_flow.tex  blood_flow_system.tex  blood_flow_with_newton_iteration.tex
notebooks/: 37_vessel_network.vtk  56_adnr.vtk  56_adnr_new.vtk  bifurcation_network.vtk  bifurcation_physics.vtk  common_carotid_artery.vtk  create_network.ipynb  create_vtk.py  upper-thoracic-aorta.vtk
notebooks/plots_56/: HDG_IDA_full_P.csv  HDG_IDA_full_Q.csv
parameters/: Test_cases.txt  aortic.prm  aortic.prm.in  aortic.vtk  constant.prm  constant.prm.in  jacobian_const.prm  jacobian_fd.prm  linear.prm  manufactured.ipynb  manufactured_arkode.ipynb  mass_integration.prm  mass_integration_velocity.prm  multi_vessel.prm  multi_vessel.prm.in  parameters_time.prm  quadratic.prm  sympy_jacobian.ipynb  visualization_parameters.pvsm
parameters/benchmark-parameters/: common_carotid_artery.prm  junctions_1.prm  single-vessel-mu.prm  single-vessel.prm  single_vessel.prm
parameters/benchmark-parameters/37arteries_network/: 37_vessel_network.prm
parameters/benchmark-parameters/56_ADNR/: 56_adnr.prm
parameters/benchmark-parameters/aortic_bifurcation/: aortic_bifurcation.prm  aortic_bifurcation.prm.in
parameters/benchmark-parameters/aortic_bifurcation/aorta_graphs/: HDG-IDA_AortaMid.csv
parameters/benchmark-parameters/aortic_bifurcation/iliac_graphs/: HDG-IDA_IliacMid.csv
parameters/benchmark-parameters/aortic_bifurcation/junction_graphs/: HDG-IDA_Junction.csv
parameters/benchmark-parameters/common-carotid-artery/: commom_carotid_artery.prm  commom_carotid_artery.prm.in  pressure_difference.csv
parameters/benchmark-parameters/single-vessel/: single_vessel.prm  single_vessel_mu.prm
parameters/benchmark-parameters/upper-thoracic-aorta/: upper_thoracic_aorta.prm  upper_thoracic_aorta.prm.in
parameters/for_rcr_outlet/: junction_0.prm  junction_1.prm  junction_2.prm
parameters/working_parameters/: Hll_parameters1.prm  Hll_parameters2.prm  hll_parameters3.prm  parameters_1.prm  parameters_2.prm  parameters_3.prm  parameters_4.prm
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_20.js  all_21.js  all_22.js  all_25.js  all_26.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+119 more)
source/: blood_flow_system.cc  blood_flow_system_updated_1d3d.cc  burger_equation.cc  burger_with_periodic_bc.cc  constants.cc  function.cc  non_linear_conservation_law.cc  vtk_utils.cc
tests/: test_constant.cc  test_constant.output  test_jacobian_boundary.cc  test_jacobian_boundary.output  test_jacobian_cell.cc  test_jacobian_cell.output  test_jacobian_const.cc  test_jacobian_const.output  test_jacobian_constant.cc  test_jacobian_constant.output  test_jacobian_eta.cc  test_jacobian_eta.output  test_jacobian_fd.cc  test_jacobian_fd.output  test_jacobian_interior.cc  test_jacobian_interior.output  test_jacobian_junction.cc  test_jacobian_junction.output  test_jacobian_linear.cc  test_jacobian_linear.output  test_linear.cc  test_linear.output  test_linear_01.cc  test_linear_01.output  test_mass_integration.cc  test_mass_integration.output  test_mass_integration_velocity.cc  test_mass_integration_velocity.output  test_mass_ones.cc  test_mass_ones.output  test_residual_quadratic.cc  test_residual_quadratic.output  test_residual_with_time.cc  test_residual_with_time.output  test_trace_residual.cc  test_trace_residual.output  test_vtk.cc  test_vtk.output
